example/secondfile/objects/DHStatus_Competitive_Discount_Details__c.object
<CustomObject>
    <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Billing Update Details-DHStatus-Competitive Discount Details</description>
    <fields>
        <fullName>Competitive_Discount_Amount__c</fullName>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Billing Update Details-Provisioning Billing Details-DHStatus-Competitive Discount Details-Competitive Discount Amount</description>
        <label>Competitive Discount Amount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitive_Discount_Plan_ID__c</fullName>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Billing Update Details-Provisioning Billing Details-DHStatus-Competitive Discount Details-Competitive Discount Plan ID</description>
        <label>Competitive Discount Plan ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitive_Discount_Type__c</fullName>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Billing Update Details-Provisioning Billing Details-DHStatus-Competitive Discount Details-Competitive Discount Type</description>
        <label>Competitive Discount Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHStatus_Provisioning_Billing_Details__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Billing Update Details-Provisioning Billing Details-DHStatus-Competitive Discount Details-DHStatus-Provisioning Billing Details</description>
        <label>DHStatus-Provisioning Billing Details</label>
        <referenceTo>DHStatus_Provisioning_Billing_Details__c</referenceTo>
        <relationshipLabel>DHStatus-Competitive Discount Details</relationshipLabel>
        <relationshipName>DHStatus_Competitive_Discount_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>DHStatus-Competitive Discount Details</label>
    <nameField>
        <displayFormat>CDD-{0000}</displayFormat>
        <label>DHStatus-Competitive Discount Details Na</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DHStatus-Competitive Discount Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>